# narrare

./: .gitignore  AGENTS.md  README.md  design.md  dev_plan.md  prompts.md  pyproject.toml
cli/: main.py
config/: default.yaml  loader.py  models.py
core/: __init__.py
core/chunking/: __init__.py  chunker.py
core/document/: __init__.py  manifest.py  txt_loader.py
core/ir/: script_builder.py  script_repair.py
core/models/: __init__.py  character.py  chunk.py  ir.py  source.py  validation.py  voice.py
core/pipeline/: __init__.py  chunk_context_profiler.py  chunking.py  qwen_tts.py  script_assembly.py  script_conversion.py  speaker_key_normalization.py  speaker_key_review.py  voice_assets.py  voice_assignment.py
core/validation/: script_integrity.py  text_integrity.py
llm/: json_utils.py  schemas.py  service.py
llm/adapters/: openrouter.py
llm/prompts/: chunk_context_profiler.py  script_converter.py  speaker_key_reviewer.py
storage/: __init__.py  json_store.py  workspace.py
tests/fixtures/: tiny_source.txt
tests/integration/: test_chunk_cli.py  test_script_convert_cli.py  test_web_app.py
tests/unit/: test_chunker.py  test_cli_progress.py  test_manifest.py  test_pipeline_workflows.py  test_script_builder.py  test_script_integrity.py  test_script_repair.py  test_txt_loader.py  test_voice_workflows.py
tts/: __init__.py  base.py  dummy.py
tts/qwen/: __init__.py  adapter.py  audio.py  bootstrap.py  paths.py
ui/: __init__.py
ui/web/: __init__.py  app.py
ui/web/static/: app.js  styles.css
ui/web/templates/: index.html
