[project]
name = "narrare"
version = "0.1.0"
description = "Local-first human-in-the-loop audiobook production workflow."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "jinja2>=3",
  "pydantic>=2",
  "PyYAML>=6",
  "openai>=2",
  "typer>=0.9",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "black>=24",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
