[project]
name = "narrare"
version = "0.1.0"
description = "Local-first human-in-the-loop audiobook production workflow."
requires-python = ">=3.11"
dependencies = [
  "accelerate==1.12.0",
  "fastapi>=0.115",
  "jinja2>=3",
  "librosa>=0.10",
  "numpy==2.2.6",
  "onnxruntime>=1.23",
  "pydantic>=2",
  "PyYAML>=6",
  "openai>=2",
  "safetensors>=0.4",
  "scipy==1.15.3",
  "soundfile>=0.12",
  "torch>=2",
  "typer>=0.9",
  "transformers==4.57.3",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "black>=24",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["tts/qwen/vendor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
